--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>what's up everybody!</head>
+    <head>
+      <title>The Solar System!</title>
+    </head>
+  
   
