image, background color

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <head>
       <title>The Solar System!</title>
     </head>
-  
+<body style="background-color:black;">
+    <center>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png>
+    </center>
   
