--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
 <body style="background-color:black;">
     <center>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png">
     </center>
   
