--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>The Solar System!</title>
-    </head>
-<body style="background-color:black;">
+<head>
+    <title>The Solar System!</title>
+</head>
+<body style="background:background: hsla(208, 33%, 21%, 1);
+             background: linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
+             background: -moz-linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
+             background: -webkit-linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
+             filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#243748', endColorstr='#30149F', GradientType=1);">
     <center>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png">
+        <h1>The Solar System</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%;">
     </center>
+
+    <section style="color:white; padding: 20px;">
+        <h2> style="color; #FFA500;">The Sun</h2>
+        <center>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Sun_full.jpg" alt="The Sun" style="width:30%;">
+        </center>
+        <p>
+            The Sun is 
+        </p>
+    
   
