--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>The Solar System!</title>
-</head>
-<body style="background:background: hsla(208, 33%, 21%, 1);
-             background: linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
-             background: -moz-linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
-             background: -webkit-linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%);
-             filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#243748', endColorstr='#30149F', GradientType=1);">
-    <center>
-        <h1>The Solar System</h1>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%;">
-    </center>
-
-    <section style="color:white; padding: 20px;">
-        <h2> style="color; #FFA500;">The Sun</h2>
+    <head>
+        <title>The Solar System!</title>
+    </head>
+    <body style="background: linear-gradient(90deg, hsla(208, 33%, 21%, 1) 17%, hsla(252, 78%, 35%, 1) 80%); color: white;">
         <center>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Sun_full.jpg" alt="The Sun" style="width:30%;">
+            <!-- Make the title big and white -->
+            <h1 style="font-size: 50px; color: white;">The Solar System!</h1>
+            <p style="font-size: 18px; width: 70%;">The Solar System is made up of the Sun and all of the objects that orbit it, including the eight planets, their moons, dwarf planets, comets, and asteroids. It spans an immense area with the Sun at the center, exerting its gravitational force to keep everything in orbit.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%;">
         </center>
-        <p>
-            The Sun is 
-        </p>
-    
-  
+
+        <!-- Your Sun Section -->
+        <section style="color:white; padding: 20px;">
+            <!-- Make the title for 'The Sun' bigger as well -->
+            <h2 style="font-size: 40px; color: #FFA500;">The Sun</h2>
+            <center>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Sun_full.jpg" alt="The Sun" style="width:30%;">
+            </center>
+            <ul style="list-style-type: disc; margin: 20px;">
+                <li>The Sun is the star at the center of the Solar System, located in the Milky Way.</li>
+                <li>Though the Sun appears yellow, orange, or red, it is actually white. Earth's atmosphere scatters its short-wavelength colors.</li>
+                <li>It is composed of 75% hydrogen and 25% oxygen, creating the hot plasma that generates energy.</li>
+                <li>The Sun's gravity holds the entire Solar System together.</li>
+                <li>It is bigger than 85% of all stars in the galaxy.</li>
+                <li>Light from the Sun takes about 20,000 years to travel from its core to the surface.</li>
+            </ul>
