sun+solar system description revamp

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <center>
             <!-- Make the title big and white -->
             <h1 style="font-size: 50px; color: white;">The Solar System!</h1>
-            <p style="font-size: 18px; width: 70%;">The Solar System is made up of the Sun and all of the objects that orbit it, including the eight planets, their moons, dwarf planets, comets, and asteroids. It spans an immense area with the Sun at the center, exerting its gravitational force to keep everything in orbit.</p>
+            <p style="font-size: 18px; width: 70%;">The Solar System is made up of the Sun and all of the objects that orbit it, including the eight planets, their moons, dwarf planets, comets, and asteroids. The Sun, being at the center, exerts its gravitational force to keep everything in orbit.</p>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%;">
         </center>
 
@@ -21,8 +21,8 @@
             <ul style="list-style-type: disc; margin: 20px;">
                 <li>The Sun is the star at the center of the Solar System, located in the Milky Way.</li>
                 <li>Though the Sun appears yellow, orange, or red, it is actually white. Earth's atmosphere scatters its short-wavelength colors.</li>
-                <li>It is composed of 75% hydrogen and 25% oxygen, creating the hot plasma that generates energy.</li>
+                <li>Composed of 75% hydrogen and 25% oxygen, creating the hot plasma that generates energy.</li>
                 <li>The Sun's gravity holds the entire Solar System together.</li>
-                <li>It is bigger than 85% of all stars in the galaxy.</li>
+                <li>Bigger than 85% of all stars in the galaxy.</li>
                 <li>Light from the Sun takes about 20,000 years to travel from its core to the surface.</li>
             </ul>
