--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <center>
             <!-- Make the title big and white -->
             <h1 style="font-size: 50px; color: white;">The Solar System!</h1>
-            <p style="font-size: 18px; width: 70%;">The Solar System is made up of the Sun and all of the objects that orbit it, including the eight planets, their moons, dwarf planets, comets, and asteroids. The Sun, being at the center, exerts its gravitational force to keep everything in orbit.</p>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%;">
+            <p style="font-size: 18px; width: 70%;">The Solar System is located within the Milky Way. It is made up of the Sun and all of the objects that orbit it, including the eight planets, their moons, dwarf planets, comets, and asteroids. The Sun, being at the center, exerts its gravitational force to keep everything in orbit.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%; border: 5px solid white;">
         </center>
 
         <!-- Your Sun Section -->
@@ -16,12 +16,15 @@
             <!-- Make the title for 'The Sun' bigger as well -->
             <h2 style="font-size: 40px; color: #FFA500;">The Sun</h2>
             <center>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Sun_full.jpg" alt="The Sun" style="width:30%;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5a1-V-EOlIw" 
+                title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen></iframe>
             </center>
             <ul style="list-style-type: disc; margin: 20px;">
-                <li>The Sun is the star at the center of the Solar System, located in the Milky Way.</li>
+                <li>The Sun is the star at the center of the Solar System.</li>
                 <li>Though the Sun appears yellow, orange, or red, it is actually white. Earth's atmosphere scatters its short-wavelength colors.</li>
-                <li>Composed of 75% hydrogen and 25% oxygen, creating the hot plasma that generates energy.</li>
+                <li>Composed of 70% hydrogen and 28% helium. The other 1.5% is composed of carbon, nitrogen, and oxygen. The 0.5% consists of many elements, such as neon, iron, silicon, sulfur, and magnesium. These all create the hot plasma, which generates energy for life on Earth. </li>
                 <li>The Sun's gravity holds the entire Solar System together.</li>
                 <li>Bigger than 85% of all stars in the galaxy.</li>
                 <li>Light from the Sun takes about 20,000 years to travel from its core to the surface.</li>
