--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Make the title for 'The Sun' bigger as well -->
             <h2 style="font-size: 40px; color: #FFA500;">The Sun</h2>
             <center>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5a1-V-EOlIw" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5a1-V-EOlIw?autoplay=1&mute=1" 
                 title="YouTube video player" frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen></iframe>
