fixed sun description - added about ~

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul style="list-style-type: disc; margin: 20px;">
                 <li>The Sun is the star at the center of the Solar System.</li>
                 <li>Though the Sun appears yellow, orange, or red, it is actually white. Earth's atmosphere scatters its short-wavelength colors.</li>
-                <li>Composed of 70% hydrogen and 28% helium. The other 1.5% is composed of carbon, nitrogen, and oxygen. The 0.5% consists of many elements, such as neon, iron, silicon, sulfur, and magnesium. These all create the hot plasma, which generates energy for life on Earth. </li>
+                <li>Composed of about 70% hydrogen and 28% helium. The other 1.5% is composed of carbon, nitrogen, and oxygen. The 0.5% consists of many elements, such as neon, iron, silicon, sulfur, and magnesium. These all create the hot plasma, which generates energy for life on Earth. </li>
                 <li>The Sun's gravity holds the entire Solar System together.</li>
                 <li>Bigger than 85% of all stars in the galaxy.</li>
                 <li>Light from the Sun takes about 20,000 years to travel from its core to the surface.</li>
