--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Planets2013.svg/1200px-Planets2013.svg.png" style="width:50%; border: 5px solid white;">
         </center>
 
-        <!-- Your Sun Section -->
-        <section style="color:white; padding: 20px;">
-            <!-- Make the title for 'The Sun' bigger as well -->
-            <h2 style="font-size: 40px; color: #FFA500;">The Sun</h2>
-            <center>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5a1-V-EOlIw?autoplay=1&mute=1" 
-                title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                allowfullscreen></iframe>
-            </center>
-            <ul style="list-style-type: disc; margin: 20px;">
+        <!-- Sun Section -->
+            <section style="color:white; padding: 20px; display: flex; align-items: flex-start;">
+            <ul style="list-style-type: disc; margin-right: 20px;">
                 <li>The Sun is the star at the center of the Solar System.</li>
                 <li>Though the Sun appears yellow, orange, or red, it is actually white. Earth's atmosphere scatters its short-wavelength colors.</li>
-                <li>Composed of about 70% hydrogen and 28% helium. The other 1.5% is composed of carbon, nitrogen, and oxygen. The 0.5% consists of many elements, such as neon, iron, silicon, sulfur, and magnesium. These all create the hot plasma, which generates energy for life on Earth. </li>
+                <li>Composed of about 70% hydrogen and 28% helium. The other 1.5% is composed of carbon, nitrogen, and oxygen. The 0.5% consists of many elements, such as neon, iron, silicon, sulfur, and magnesium. These all create the hot plasma, which generates energy for life on Earth.</li>
                 <li>The Sun's gravity holds the entire Solar System together.</li>
                 <li>Bigger than 85% of all stars in the galaxy.</li>
                 <li>Light from the Sun takes about 20,000 years to travel from its core to the surface.</li>
             </ul>
+            <div>
+                <h2 style="font-size: 40px; color: #FFA500;">The Sun</h2>
+                <iframe width="320" height="180" src="https://www.youtube.com/embed/5a1-V-EOlIw?autoplay=1&mute=1" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen></iframe>
+            </div>
+            </section>
