sun caption yellow

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen></iframe>
-            <p style="font-style: italic; text-align: center; margin-top: 10px;">The Sun in Motion!</p>
+            <p style="font-style: italic; text-align: center; margin-top: 10px; color:yellow;">The Sun in Motion!</p>
         </div>
         </section>
