--- a/index.html
+++ b/index.html
@@ -32,3 +32,19 @@
             <p style="font-style: italic; text-align: center; margin-top: 10px; color:yellow;">The Sun in Motion!</p>
         </div>
         </section>
+
+    <!-- Mercury Section -->
+        <section style="color:white; padding: 20px;">
+            <div style="margin-right: 20px;">
+                <h2 style="font-size: 40px; color: 
+
+
+    <! -- Earth Section -->
+        <section style="color:white; padding: 20px; background: rgb(75,115,221); background: linear-gradient(90deg, rgba(75,115,221,1) 5%, rgba(85,172,108,1) 35%, rgba(126,114,45,1) 100%);">
+            <h2 style="font-size: 40px; color: #FFFFFF;">Earth</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+        </section>
+                    
+</html>
