fixed eath, added/fixed mercury + add venus

--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
 
     <!-- Mercury Section -->
         <section style="color:white; padding: 20px;">
-            <div style="margin-right: 20px;">
-                <h2 style="font-size: 40px; color: 
+            <h2 style="font-size: 40px; color; #947575;">Mercury</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
 
+    <!-- Venus -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; ##d4708e;">Venus</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
 
     <! -- Earth Section -->
         <section style="color:white; padding: 20px; background: rgb(75,115,221); background: linear-gradient(90deg, rgba(75,115,221,1) 5%, rgba(85,172,108,1) 35%, rgba(126,114,45,1) 100%);">
@@ -46,5 +54,6 @@
                     <li>...</li>
                 </ul>
         </section>
+
                     
 </html>
