added all additional planets

--- a/index.html
+++ b/index.html
@@ -55,5 +55,41 @@
                 </ul>
         </section>
 
+        <!-- Mars Section -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; #947575;">Mars</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+
+        <!-- Jupiter Section -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; #947575;">Jupiter</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+
+        <!-- Saturn Section -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; #947575;">Saturn</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+
+        <!-- Uranus Section -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; #947575;">Uranus</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+
+        <!-- Neptune Section -->
+        <section style="color:white; padding: 20px;">
+            <h2 style="font-size: 40px; color; #947575;">Neptune</h2>
+                <ul style="list-style-type: disc; margin: 20px 0;">
+                    <li>...</li>
+                </ul>
+
+
                     
 </html>
