fixed planet formats

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
+        </section>
+
 
     <!-- Venus -->
         <section style="color:white; padding: 20px;">
@@ -46,6 +48,7 @@
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
+        </section>
 
     <! -- Earth Section -->
         <section style="color:white; padding: 20px; background: rgb(75,115,221); background: linear-gradient(90deg, rgba(75,115,221,1) 5%, rgba(85,172,108,1) 35%, rgba(126,114,45,1) 100%);">
@@ -55,41 +58,45 @@
                 </ul>
         </section>
 
-        <!-- Mars Section -->
+    <!-- Mars Section -->
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Mars</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
+        </section>
 
-        <!-- Jupiter Section -->
+    <!-- Jupiter Section -->
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Jupiter</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
+        </section>
 
-        <!-- Saturn Section -->
+    <!-- Saturn Section -->
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Saturn</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
+        </section>
 
-        <!-- Uranus Section -->
+    <!-- Uranus Section -->
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Uranus</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
-
-        <!-- Neptune Section -->
+        </section>
+            
+    <!-- Neptune Section -->
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Neptune</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
                 </ul>
-
+        </section>
 
                     
 </html>
