--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </section>
             
     <!-- Neptune Section -->
-        <section style="color:white; padding: 20px;">
+        <section style="color:white; padding: 20px;  background: rgb(14,23,59); background: linear-gradient(90deg, rgba(14,23,59,1) 8%, rgba(77,130,200,1) 68%, rgba(74,130,202,1) 69%, rgba(69,130,206,1) 74%, rgba(13,128,246,1) 95%, rgba(0,127,255,1) 100%); ">
             <h2 style="font-size: 40px; color; #947575;">Neptune</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>...</li>
