--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Mercury</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Mercury has the largest core relative to its body of any planet</li>
+                    <li>Mercury has the greatest temperature fluctuations of any planet</li>
+                    <li>Mercury has the shortest orbital period of any planet</li>
+                    <li>Mercury has only been visited by 3 spacecraft</li>
+                    <li>Mercury has more mass than Ganymede and Titan combined</li>
                 </ul>
         </section>
 
@@ -46,7 +50,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; ##d4708e;">Venus</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Venus is the sister planet of Earth</li>
+                    <li>It is the hottest planet out of the eight listed</li>
+                    <li>The atmospheric pressure on Venus is 90 times that of Earth</li>
+                    <li>Venus is 81% the mass of Earth</li>
+                    <li>It is possible Venus might have once had water flowing on its surface</li>
                 </ul>
         </section>
 
@@ -54,7 +62,11 @@
         <section style="color:white; padding: 20px; background: rgb(75,115,221); background: linear-gradient(90deg, rgba(75,115,221,1) 5%, rgba(85,172,108,1) 35%, rgba(126,114,45,1) 100%);">
             <h2 style="font-size: 40px; color: #FFFFFF;">Earth</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Where all life is</li>
+                    <li>The largest of the rocky planets</li>
+                    <li>More massive than all of the other rocky planets combined</li>
+                    <li>The only planet with liquids on its surface</li>
+                    <li>The planet with he biggest moon relative to its size</li>
                 </ul>
         </section>
 
@@ -62,7 +74,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Mars</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Known as the red planet</li>
+                    <li>About half the size of Earth</li>
+                    <li>Has the tallest volcano in the solar system: Olympus Mons</li>
+                    <li>1 of the only 2 inner planets to have at least one moon</li>
+                    <li>Has the gravity value as Mercury despite being bigger</li>
                 </ul>
         </section>
 
@@ -70,7 +86,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Jupiter</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>The biggest planet in the solar system</li>
+                    <li>3 times more massive than Saturn despite being a similar  same radius</li>
+                    <li>Most famous storm: the Great Red Spot</li>
+                    <li>Has the most dynamic atmosphere of the gaseous planets</li>
+                    <li>Has 4 of the 7 moons bigger than Pluto</li>
                 </ul>
         </section>
 
@@ -78,7 +98,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Saturn</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Known for its famous rings</li>
+                    <li>The most moons of any planet at 146 currently</li>
+                    <li>The least dense of any planet</li>
+                    <li>Source of a storm bigger than the GRS called the Great White Spot</li>
+                    <li>Saturn's ring tilt from Earth varies throughout years</li>
                 </ul>
         </section>
 
@@ -86,7 +110,11 @@
         <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Uranus</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Coldest recorded temperature of any planet</li>
+                    <li>Has moons that are named after Shakespearean characters</li>
+                    <li>Has a lower surface gravity than Earth does</li>
+                    <li>Most unique rotation of any planet</li>
+                    <li>Its moons and rings are also tilted similarly</li>
                 </ul>
         </section>
             
@@ -94,7 +122,11 @@
         <section style="color:white; padding: 20px;  background: rgb(14,23,59); background: linear-gradient(90deg, rgba(14,23,59,1) 8%, rgba(77,130,200,1) 68%, rgba(74,130,202,1) 69%, rgba(69,130,206,1) 74%, rgba(13,128,246,1) 95%, rgba(0,127,255,1) 100%); ">
             <h2 style="font-size: 40px; color; #947575;">Neptune</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
-                    <li>...</li>
+                    <li>Fastest winds of any planet</li>
+                    <li>Around the same temperature as Uranus despite being much further</li>
+                    <li>Has a very major moon that orbits in the opposite direction Neptune spins</li>
+                    <li>Not as blue as commonly depicted</li>
+                    <li>Like Uranus, Neptune was only visited by 1 spacecraft</li>
                 </ul>
         </section>
 
