--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <li>Mercury has the largest core relative to its body of any planet</li>
                     <li>Mercury has the greatest temperature fluctuations of any planet</li>
                     <li>Mercury has the shortest orbital period of any planet</li>
-                    <li>Mercury has only been visited by 3 spacecraft</li>
+                    <li>Mercury has only been visited by 3 spacecrafts</li>
                     <li>Mercury has more mass than Ganymede and Titan combined</li>
                 </ul>
-            <iframe width="500" height="500" img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg" style="width:320"</iframe>
+            <img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg">
         </section>
 
 
