--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     <li>Mercury has only been visited by 3 spacecrafts</li>
                     <li>Mercury has more mass than Ganymede and Titan combined</li>
                 </ul>
-            <img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg">
+            <div style="margin-right=20px">
+                <img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg">
         </section>
 
 
