--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <li>Mercury has only been visited by 3 spacecrafts</li>
                     <li>Mercury has more mass than Ganymede and Titan combined</li>
                 </ul>
-            <div style="margin-right=0px">
-                <img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg">
+            <div style="text-align:right">
+                <img src="https://www.publicdomainpictures.net/pictures/190000/nahled/planet-mercury.jpg" style="width: 200px; float: right; margin-left: 20px;>
         </section>
 
 
