--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <li>The only planet with liquids on its surface</li>
                     <li>The planet with he biggest moon relative to its size</li>
                 </ul>
-            <img src="https://cdn.pixabay.com/photo/2011/12/13/14/28/earth-11008_640.jpg">
+            <img src="https://cdn.pixabay.com/photo/2011/12/13/14/28/earth-11008_640.jpg" style="width: 300px; height: auto;">
         </section>
 
     <!-- Mars Section -->
@@ -83,7 +83,7 @@
                     <li>1 of the only 2 inner planets to have at least one moon</li>
                     <li>Has the gravity value as Mercury despite being bigger</li>
                 </ul>
-            <img src="https://images.unsplash.com/photo-1614728894747-a83421e2b9c9?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8bWFyc3xlbnwwfHwwfHx8MA%3D%3D">
+            <img src="https://images.unsplash.com/photo-1614728894747-a83421e2b9c9?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8bWFyc3xlbnwwfHwwfHx8MA%3D%3D" style="width: 300px; height: auto;">
         </section>
 
     <!-- Jupiter Section -->
@@ -109,7 +109,7 @@
                     <li>Source of a storm bigger than the GRS called the Great White Spot</li>
                     <li>Saturn's ring tilt from Earth varies throughout years</li>
                 </ul>
-            <img src="https://cdn.pixabay.com/photo/2012/11/28/10/54/planet-67672_1280.jpg">
+            <img src="https://cdn.pixabay.com/photo/2012/11/28/10/54/planet-67672_1280.jpg" style="width: 300px; height: auto;">
         </section>
 
     <!-- Uranus Section -->
@@ -122,7 +122,7 @@
                     <li>Most unique rotation of any planet</li>
                     <li>Its moons and rings are also tilted similarly</li>
                 </ul>
-            <img src="https://cdn.pixabay.com/photo/2020/09/10/01/58/uranus-5559037_640.jpg">
+            <img src="https://cdn.pixabay.com/photo/2020/09/10/01/58/uranus-5559037_640.jpg" style="width: 300px; height: auto;">
         </section>
             
     <!-- Neptune Section -->
@@ -135,7 +135,7 @@
                     <li>Not as blue as commonly depicted</li>
                     <li>Like Uranus, Neptune was only visited by 1 spacecraft</li>
                 </ul>
-            <img src="https://cdn.pixabay.com/photo/2012/11/28/09/17/neptune-67537_640.jpg">
+            <img src="https://cdn.pixabay.com/photo/2012/11/28/09/17/neptune-67537_640.jpg" style="width: 300px; height: auto;">
         </section>
 
                     
