--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
 
     <! -- Earth Section -->
-        <section style="color:white; padding: 20px; background: rgb(75,115,221); background: linear-gradient(90deg, rgba(75,115,221,1) 5%, rgba(85,172,108,1) 35%, rgba(126,114,45,1) 100%);">
+        <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color: #FFFFFF;">Earth</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>Where all life is</li>
@@ -126,7 +126,7 @@
         </section>
             
     <!-- Neptune Section -->
-        <section style="color:white; padding: 20px;  background: rgb(14,23,59); background: linear-gradient(90deg, rgba(14,23,59,1) 8%, rgba(77,130,200,1) 68%, rgba(74,130,202,1) 69%, rgba(69,130,206,1) 74%, rgba(13,128,246,1) 95%, rgba(0,127,255,1) 100%); ">
+        <section style="color:white; padding: 20px;">
             <h2 style="font-size: 40px; color; #947575;">Neptune</h2>
                 <ul style="list-style-type: disc; margin: 20px 0;">
                     <li>Fastest winds of any planet</li>
@@ -138,5 +138,7 @@
             <img src="https://cdn.pixabay.com/photo/2012/11/28/09/17/neptune-67537_640.jpg" style="width: 300px; height: auto;">
         </section>
 
+        <sections style="color:white; padding: 12px;">
+            <p><a href="https://apod.nasa.gov/apod/astropix.html">View NASA's Astronomy Picture of the Day!</a></p>
                     
 </html>
