--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             <img src="https://cdn.pixabay.com/photo/2012/11/28/09/17/neptune-67537_640.jpg" style="width: 300px; height: auto;">
         </section>
 
-        <section style="color:white; padding: 12px;">
+        <section style="color:white; padding: 12px; text-align:right;">
             <p style="border: 2px solid white; padding: 10px; display: inline-block;">
-                <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank" style="color: white; text-decoration: none;">View NASA's Astronomy Picture of the Day!</a>
+                <a href="https://apod.nasa.gov/apod/astropix.html" target="_blank" style="color: yellow; text-decoration: none;">Click to View NASA's Astronomy Picture of the Day!</a>
             </p>
         </section>
                     
